--- a/sass/typography.sass
+++ b/sass/typography.sass
@@ -22,7 +22,7 @@ h2
     line-height: 3rem
     font-family: 'Abril Fatface', cursive
     @media screen and ( max-width: $midScreen )
-        font-size: 2.5rem
+        font-size: 3rem
         line-height: 2rem
 
 h3
@@ -40,6 +40,9 @@ p
 strong
     font-weight: 700
 
-
+a
+    text-decoration: none
+    color: $priColor
+    
 .handwriteMessage
     font-size: 1rem
