--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ h2, .process .container__process .box__process .boxcards__process .card__process
 
 @media screen and (max-width: 520px) {
   h2, .process .container__process .box__process .boxcards__process .card__process .num__process {
-    font-size: 2.5rem;
+    font-size: 3rem;
     line-height: 2rem;
   }
 }
@@ -59,6 +59,11 @@ p {
 
 strong {
   font-weight: 700;
+}
+
+a {
+  text-decoration: none;
+  color: #009AD8;
 }
 
 .handwriteMessage, .process .container__process .box__process .title__process::after {
