--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,6 +1,6 @@
 .button, .primaryButton, .secondaryButton {
   display: inline-block;
-  padding: 1rem 3rem;
+  padding: 0.5rem 2rem;
   font-size: 1.2rem;
   margin: 1.5rem 0;
   font-weight: 400;
@@ -22,6 +22,6 @@
           box-shadow: inset 0 0 0 1px #009AD8;
 }
 
-.linkbutton {
+.linkButton {
   color: orange;
 }
