--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -72,7 +72,7 @@ a {
 
 .button, .primaryButton, .secondaryButton {
   display: inline-block;
-  padding: 1rem 3rem;
+  padding: 0.5rem 2rem;
   font-size: 1.2rem;
   margin: 1.5rem 0;
   font-weight: 400;
@@ -94,7 +94,7 @@ a {
           box-shadow: inset 0 0 0 1px #009AD8;
 }
 
-.linkbutton {
+.linkButton {
   color: orange;
 }
 
@@ -276,7 +276,7 @@ body #themeToggle {
     padding: 2rem 1rem;
   }
   .sellarea .title__sellarea, .sellarea .title__services, .sellarea .title__process, .sellarea .title__cases, .sellarea .title__tools, .sellarea .title__contact, .services .title__sellarea, .services .title__services, .services .title__process, .services .title__cases, .services .title__tools, .services .title__contact, .process .title__sellarea, .process .title__services, .process .title__process, .process .title__cases, .process .title__tools, .process .title__contact, .cases .title__sellarea, .cases .title__services, .cases .title__process, .cases .title__cases, .cases .title__tools, .cases .title__contact, .tools .title__sellarea, .tools .title__services, .tools .title__process, .tools .title__cases, .tools .title__tools, .tools .title__contact, .contact .title__sellarea, .contact .title__services, .contact .title__process, .contact .title__cases, .contact .title__tools, .contact .title__contact {
-    -webkit-text-stroke: 1px #2c2c2f;
+    -webkit-text-stroke: 2px #2c2c2f;
     color: #d4d4d4;
     margin-bottom: 3rem;
   }
@@ -579,9 +579,6 @@ body #themeToggle {
     -webkit-transform: translateY(0);
             transform: translateY(0);
   }
-  .contact .container__contact .box__contact {
-    margin-bottom: 2rem;
-  }
   .contact .container__contact .box__contact .info__contact {
     width: 240px;
     margin: 0 auto;
@@ -617,6 +614,10 @@ body #themeToggle {
     -webkit-box-direction: normal;
         -ms-flex-flow: column nowrap;
             flex-flow: column nowrap;
+    margin: 0 auto;
+  }
+  .contact .container__contact .box__contact .form__contact h3 {
+    margin-bottom: 2rem;
   }
   .contact .container__contact .box__contact .input__contactform {
     width: auto;
@@ -625,31 +626,50 @@ body #themeToggle {
   }
   .contact .container__contact .box__contact .input__contactform label {
     position: absolute;
-    top: 0.2rem;
+    top: 0.3rem;
     left: 0.5rem;
     color: #2c2c2f;
     -webkit-transform: translateY(0);
             transform: translateY(0);
+    pointer-events: none;
     -webkit-transition: 300ms ease-in-out;
     transition: 300ms ease-in-out;
   }
   .contact .container__contact .box__contact .input__contactform input, .contact .container__contact .box__contact .input__contactform textarea {
-    width: 90%;
+    width: 100%;
     max-width: 450px;
     margin: 0 auto;
     border: none;
     outline: none;
-    font-family: 'Nunito Sans', sans-serif;
     font-size: 1rem;
-    border-bottom: 1px solid #2c2c2f;
     padding: 0.25rem 0.5rem;
     resize: none;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.2);
     -webkit-transition: 500ms ease;
     transition: 500ms ease;
   }
-  .contact .container__contact .box__contact .input__contactform input:focus, .contact .container__contact .box__contact .input__contactform textarea:focus {
+  .contact .container__contact .box__contact .input__contactform input:invalid, .contact .container__contact .box__contact .input__contactform textarea:invalid {
+    color: darkred;
+    border: 1px solid darkred;
+  }
+  .contact .container__contact .box__contact .input__contactform input:invalid + label, .contact .container__contact .box__contact .input__contactform textarea:invalid + label {
+    -webkit-transform: translateY(-1.5rem);
+            transform: translateY(-1.5rem);
+    color: darkred;
+    font-size: 0.9rem;
+  }
+  .contact .container__contact .box__contact .input__contactform input:placeholder-shown, .contact .container__contact .box__contact .input__contactform textarea:placeholder-shown {
+    color: #2c2c2f;
     background-color: rgba(255, 255, 255, 0.2);
+    border: none;
+  }
+  .contact .container__contact .box__contact .input__contactform input:placeholder-shown + label, .contact .container__contact .box__contact .input__contactform textarea:placeholder-shown + label {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    color: #2c2c2f;
+  }
+  .contact .container__contact .box__contact .input__contactform input:focus, .contact .container__contact .box__contact .input__contactform textarea:focus {
+    background-color: rgba(255, 255, 255, 0.5);
   }
   .contact .container__contact .box__contact .input__contactform input:focus + label, .contact .container__contact .box__contact .input__contactform textarea:focus + label {
     -webkit-transform: translateY(-1.5rem);
@@ -660,6 +680,10 @@ body #themeToggle {
     -webkit-transform: translateY(-1.5rem);
             transform: translateY(-1.5rem);
     font-size: 0.9rem;
+  }
+  .contact .container__contact .box__contact .input__contactform button {
+    outline: none;
+    border: none;
   }
   .contact .container__contact .box__contact .emailSuccess {
     display: none;
