--- a/sass/buttons.sass
+++ b/sass/buttons.sass
@@ -2,14 +2,13 @@
 
 .button
     display: inline-block
-    padding: 1rem 3rem
+    padding: 0.5rem 2rem
     font-size: 1.2rem
     margin: 1.5rem 0
     font-weight: 400
     
 .primaryButton
     @extend .button
-
     color: $fontSecColor
     background-color: $priColor
 
@@ -18,11 +17,10 @@
         
 .secondaryButton
     @extend .button
-
     background-color: none
     color: $priColor
     box-shadow: inset 0 0 0 1px $priColor
 
-.linkbutton
+.linkButton
     color: orange
     
