--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,7 @@
 *,
 *::after,
 *::before {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   text-decoration: none;
@@ -72,7 +71,7 @@ a {
 
 .button, .primaryButton, .secondaryButton {
   display: inline-block;
-  padding: 1rem 3rem;
+  padding: 0.5rem 2rem;
   font-size: 1.2rem;
   margin: 1.5rem 0;
   font-weight: 400;
@@ -90,11 +89,10 @@ a {
 .secondaryButton {
   background-color: none;
   color: #009AD8;
-  -webkit-box-shadow: inset 0 0 0 1px #009AD8;
-          box-shadow: inset 0 0 0 1px #009AD8;
+  box-shadow: inset 0 0 0 1px #009AD8;
 }
 
-.linkbutton {
+.linkButton {
   color: orange;
 }
 
@@ -113,16 +111,9 @@ nav {
 nav .navigation {
   width: 100%;
   max-width: 1200px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-flow: row nowrap;
+  justify-content: space-between;
   margin: 0 auto;
   padding: 1rem;
 }
@@ -148,7 +139,6 @@ nav #themeToggle {
 header, .container__sellarea, .services, .process, .cases, .tools, .contact {
   width: 100%;
   min-height: 80vh;
-  display: -ms-grid;
   display: grid;
   place-items: center;
   color: #d4d4d4;
@@ -158,13 +148,9 @@ header, .container__sellarea, .services, .process, .cases, .tools, .contact {
 header .container__header, .container__sellarea .container__header, .services .container__header, .process .container__header, .cases .container__header, .tools .container__header, .contact .container__header {
   width: 90%;
   max-width: 1100px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding: 1rem;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 
 header .container__header .box__header, .container__sellarea .container__header .box__header, .services .container__header .box__header, .process .container__header .box__header, .cases .container__header .box__header, .tools .container__header .box__header, .contact .container__header .box__header {
@@ -201,12 +187,8 @@ header .container__header p, .container__sellarea .container__header p, .service
 .container__sellarea .box__sellarea .info__sellarea {
   width: 100%;
   color: #2c2c2f;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 
 .container__sellarea .box__sellarea .info__sellarea p {
@@ -265,12 +247,8 @@ header .container__header p, .container__sellarea .container__header p, .service
 
 .services .container__services .box__services .boxcards__services {
   color: #2c2c2f;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 
 .services .container__services .box__services .boxcards__services .card__services {
@@ -327,12 +305,8 @@ header .container__header p, .container__sellarea .container__header p, .service
 
 .process .container__process .box__process .boxcards__process {
   height: 460px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  align-items: flex-end;
   position: absolute;
   left: 0;
   width: 100vw;
@@ -349,14 +323,10 @@ header .container__header p, .container__sellarea .container__header p, .service
   width: 250px;
   height: 350px;
   padding: 1rem;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
+  flex-shrink: 0;
   position: relative;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 1fr 2fr;
-      grid-template-rows: 1fr 2fr;
-  -webkit-transition: 500ms ease-in-out;
+  grid-template-rows: 1fr 2fr;
   transition: 500ms ease-in-out;
   z-index: 10;
 }
@@ -421,10 +391,8 @@ header .container__header p, .container__sellarea .container__header p, .service
 }
 
 .cases .container__cases .box__cases .boxcards__cases {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   gap: 0.5rem;
 }
 
@@ -445,8 +413,6 @@ header .container__header p, .container__sellarea .container__header p, .service
 
 .cases .container__cases .box__cases .boxcards__cases .card__cases .labelCard__cases .tags__cases {
   font-size: 0.8rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin: 0.5rem 0 0.2rem 0;
 }
@@ -495,16 +461,9 @@ header .container__header p, .container__sellarea .container__header p, .service
 .tools .container__tools .box__tools .boxcards__tools {
   width: 100%;
   height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-flow: row wrap;
+  justify-content: center;
 }
 
 .tools .container__tools .box__tools .boxcards__tools .card__tools {
@@ -512,30 +471,18 @@ header .container__header p, .container__sellarea .container__header p, .service
   width: 100px;
   background-color: #f0f0f0;
   margin: 0.25rem;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex-shrink: 0;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
 }
 
 .tools .container__tools .box__tools .boxcards__tools .card__tools .img__tools {
   width: 40px;
   height: 40px;
-  -webkit-transform: translateY(0.5rem) scale(1.5);
-          transform: translateY(0.5rem) scale(1.5);
-  -webkit-transition: 0.5s cubic-bezier(0.47, -0.38, 0.2, 2);
+  transform: translateY(0.5rem) scale(1.5);
   transition: 0.5s cubic-bezier(0.47, -0.38, 0.2, 2);
 }
 
@@ -548,20 +495,16 @@ header .container__header p, .container__sellarea .container__header p, .service
   color: #009AD8;
   font-weight: 500;
   margin-top: 0.25rem;
-  -webkit-transform: translateY(40px);
-          transform: translateY(40px);
-  -webkit-transition: 0.5s cubic-bezier(0.47, -0.38, 0.52, 1.46);
+  transform: translateY(40px);
   transition: 0.5s cubic-bezier(0.47, -0.38, 0.52, 1.46);
 }
 
 .tools .container__tools .box__tools .boxcards__tools .card__tools:hover > .name__tools {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
+  transform: translateY(0);
 }
 
 .tools .container__tools .box__tools .boxcards__tools .card__tools:hover > .img__tools {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
+  transform: translateY(0);
 }
 
 .contact {
@@ -592,3 +535,4 @@ header .container__header p, .container__sellarea .container__header p, .service
   background-color: white;
   width: 350px;
 }
+/*# sourceMappingURL=style.css.map */
