--- a/sass/style_mobile.sass
+++ b/sass/style_mobile.sass
@@ -42,7 +42,7 @@ body
             padding: 0.5rem
 
             .logo__nav
-                // width: 40px
+                width: 40px
                 height: 40px
 
 
@@ -148,6 +148,7 @@ body
         .myPic
             margin: 0 auto 2rem auto
             width: 160px
+            height: 221px
         
         .box__header
             h1
