--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -2,7 +2,8 @@
 *,
 *::after,
 *::before {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
   text-decoration: none;
@@ -89,7 +90,8 @@ a {
 .secondaryButton {
   background-color: none;
   color: #009AD8;
-  box-shadow: inset 0 0 0 1px #009AD8;
+  -webkit-box-shadow: inset 0 0 0 1px #009AD8;
+          box-shadow: inset 0 0 0 1px #009AD8;
 }
 
 .linkButton {
@@ -99,7 +101,8 @@ a {
 body {
   background-color: #d4d4d4;
   position: relative;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body #themeToggle {
@@ -115,7 +118,8 @@ body #themeToggle {
 @media screen and (max-width: 520px) {
   nav {
     background-color: rgba(44, 44, 47, 0.5);
-    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+            backdrop-filter: blur(4px);
     position: fixed;
     top: 0;
     left: 0;
@@ -124,19 +128,31 @@ body #themeToggle {
   }
   nav .navigation {
     max-width: 1200px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin: 0 auto;
     padding: 0.5rem;
   }
   nav .navigation .logo__nav {
+    width: 40px;
     height: 40px;
   }
   nav .navigation .menu__nav {
     z-index: 10000000;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 30px;
   }
   nav .navigation .menu__nav span {
@@ -144,6 +160,7 @@ body #themeToggle {
     height: 2px;
     width: 100%;
     position: relative;
+    -webkit-transition: 500ms cubic-bezier(0.47, -0.38, 0.52, 1.46);
     transition: 500ms cubic-bezier(0.47, -0.38, 0.52, 1.46);
   }
   nav .navigation .menu__nav span::before, nav .navigation .menu__nav span::after {
@@ -152,6 +169,7 @@ body #themeToggle {
     content: '';
     width: 100%;
     height: 100%;
+    -webkit-transition: 200ms cubic-bezier(0.47, -0.38, 0.52, 1.46);
     transition: 200ms cubic-bezier(0.47, -0.38, 0.52, 1.46);
   }
   nav .navigation .menu__nav span::after {
@@ -167,20 +185,26 @@ body #themeToggle {
     display: none;
   }
   nav .nav-toggle:checked ~ .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     opacity: 1;
-    transform: scale(1, 1);
+    -webkit-transform: scale(1, 1);
+            transform: scale(1, 1);
   }
   nav .nav-toggle:checked ~ .menu__nav span {
-    transform-origin: center center;
-    transform: rotate(405deg);
+    -webkit-transform-origin: center center;
+            transform-origin: center center;
+    -webkit-transform: rotate(405deg);
+            transform: rotate(405deg);
     background-color: #d4d4d4;
   }
   nav .nav-toggle:checked ~ .menu__nav span::before, nav .nav-toggle:checked ~ .menu__nav span::after {
     background-color: #d4d4d4;
     width: 100%;
     top: 0;
-    transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
   }
   nav .menu {
     position: absolute;
@@ -189,13 +213,23 @@ body #themeToggle {
     top: 0;
     left: 0;
     background-color: #2c2c2f;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     text-align: center;
     opacity: 0;
-    transform: scale(0, 1);
-    transform-origin: right;
+    -webkit-transform: scale(0, 1);
+            transform: scale(0, 1);
+    -webkit-transform-origin: right;
+            transform-origin: right;
+    -webkit-transition: 300ms cubic-bezier(0.47, -0.38, 0.52, 1.46);
     transition: 300ms cubic-bezier(0.47, -0.38, 0.52, 1.46);
   }
   nav .menu li {
@@ -218,12 +252,18 @@ body #themeToggle {
     width: 100%;
     min-height: 95vh;
     background-color: #2c2c2f;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   header .myPic {
     margin: 0 auto 2rem auto;
     width: 160px;
+    height: 221px;
   }
   header .box__header h1 {
     line-height: 2.5rem;
@@ -261,7 +301,8 @@ body #themeToggle {
     height: 100%;
     bottom: -2rem;
     left: 50%;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
     background-color: rgba(0, 154, 216, 0.4);
     z-index: -1;
   }
@@ -284,16 +325,27 @@ body #themeToggle {
     width: 90%;
     max-width: 280px;
     margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: column nowrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
   }
   .services .container__services .box__services .boxcards__services .card__services {
     height: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: column nowrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
     padding: 1rem;
     margin: 0.5rem;
     background-color: #eee;
+    -webkit-transition: 500ms ease-in-out;
     transition: 500ms ease-in-out;
   }
   .services .container__services .box__services .boxcards__services .card__services:hover {
@@ -323,8 +375,13 @@ body #themeToggle {
     padding: 0 1rem;
     width: 100vw;
     height: 350px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row nowrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
     overflow-x: scroll;
   }
   .process .container__process .box__process .boxcards__process::-webkit-scrollbar {
@@ -336,10 +393,14 @@ body #themeToggle {
     margin: 1rem 0.5rem;
     width: 220px;
     height: 300px;
-    flex-shrink: 0;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
     padding: 0.5rem;
+    display: -ms-grid;
     display: grid;
-    grid-template-rows: 1fr 1.5fr;
+    -ms-grid-rows: 1fr 1.5fr;
+        grid-template-rows: 1fr 1.5fr;
+    -webkit-transition: 200ms ease-in-out;
     transition: 200ms ease-in-out;
   }
   .process .container__process .box__process .boxcards__process .card__process .img__process {
@@ -352,10 +413,18 @@ body #themeToggle {
     color: #009AD8;
   }
   .process .container__process .box__process .boxcards__process .card__process .cardInfo__process {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    flex-shrink: 1;
-    justify-content: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-negative: 1;
+        flex-shrink: 1;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
   .process .container__process .box__process .boxcards__process .card__process .cardInfo__process .num__process {
     position: absolute;
@@ -393,13 +462,16 @@ body #themeToggle {
     position: absolute;
     top: -3rem;
     left: 50%;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
   }
   .cases .container__cases .box__cases .boxcards__cases .card__cases .img__cases img {
     width: 100%;
     height: 100%;
-    object-position: center center;
-    object-fit: cover;
+    -o-object-position: center center;
+       object-position: center center;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .cases .container__cases .box__cases .boxcards__cases .card__cases h3 {
     margin-top: calc(250px - 2.5rem);
@@ -407,8 +479,13 @@ body #themeToggle {
   .cases .container__cases .box__cases .boxcards__cases .card__cases .tags__cases {
     font-size: 0.8rem;
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
     line-height: 1rem;
     margin: 0.5rem 0 0.3rem 0;
   }
@@ -436,31 +513,51 @@ body #themeToggle {
     z-index: -1;
     top: 50%;
     left: 0;
-    transform: translateY(-45%);
+    -webkit-transform: translateY(-45%);
+            transform: translateY(-45%);
   }
   .tools .container__tools .box__tools .boxcards__tools {
     width: 100%;
     height: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .tools .container__tools .box__tools .card__tools {
     height: 80px;
     width: 80px;
     background-color: #f0f0f0;
     margin: 0.25rem;
-    flex-shrink: 0;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     overflow: hidden;
   }
   .tools .container__tools .box__tools .card__tools .img__tools {
     width: 30px;
     height: 30px;
-    transform: translateY(0.5rem) scale(1.5);
+    -webkit-transform: translateY(0.5rem) scale(1.5);
+            transform: translateY(0.5rem) scale(1.5);
+    -webkit-transition: 0.5s cubic-bezier(0.47, -0.38, 0.2, 2);
     transition: 0.5s cubic-bezier(0.47, -0.38, 0.2, 2);
   }
   .tools .container__tools .box__tools .card__tools .img__tools .iconify {
@@ -471,14 +568,18 @@ body #themeToggle {
     color: #009AD8;
     font-weight: 500;
     margin-top: 0.25rem;
-    transform: translateY(40px);
+    -webkit-transform: translateY(40px);
+            transform: translateY(40px);
+    -webkit-transition: 0.5s cubic-bezier(0.47, -0.38, 0.52, 1.46);
     transition: 0.5s cubic-bezier(0.47, -0.38, 0.52, 1.46);
   }
   .tools .container__tools .box__tools .card__tools:hover > .name__tools {
-    transform: translateY(0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
   .tools .container__tools .box__tools .card__tools:hover > .img__tools {
-    transform: translateY(0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
   .contact .container__contact .box__contact .info__contact {
     width: 240px;
@@ -488,6 +589,8 @@ body #themeToggle {
   }
   .contact .container__contact .box__contact .info__contact .address__contactform, .contact .container__contact .box__contact .info__contact .email__contactform, .contact .container__contact .box__contact .info__contact .phone__contactform {
     padding: 0.5rem 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: 0.5rem;
   }
@@ -496,6 +599,7 @@ body #themeToggle {
   }
   .contact .container__contact .box__contact .info__contact .address__contactform a, .contact .container__contact .box__contact .info__contact .email__contactform a, .contact .container__contact .box__contact .info__contact .phone__contactform a {
     text-decoration: none;
+    -webkit-transition: 300ms ease-in-out;
     transition: 300ms ease-in-out;
     color: #2c2c2f;
   }
@@ -508,7 +612,10 @@ body #themeToggle {
   }
   .contact .container__contact .box__contact .form__contact .inputs__contactform {
     width: 100%;
-    flex-flow: column nowrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
     margin: 0 auto;
   }
   .contact .container__contact .box__contact .form__contact h3 {
@@ -524,8 +631,10 @@ body #themeToggle {
     top: 0.3rem;
     left: 0.5rem;
     color: #2c2c2f;
-    transform: translateY(0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
     pointer-events: none;
+    -webkit-transition: 300ms ease-in-out;
     transition: 300ms ease-in-out;
   }
   .contact .container__contact .box__contact .input__contactform input, .contact .container__contact .box__contact .input__contactform textarea {
@@ -538,6 +647,7 @@ body #themeToggle {
     padding: 0.25rem 0.5rem;
     resize: none;
     background-color: rgba(255, 255, 255, 0.2);
+    -webkit-transition: 500ms ease;
     transition: 500ms ease;
   }
   .contact .container__contact .box__contact .input__contactform input:invalid, .contact .container__contact .box__contact .input__contactform textarea:invalid {
@@ -545,7 +655,8 @@ body #themeToggle {
     border: 1px solid darkred;
   }
   .contact .container__contact .box__contact .input__contactform input:invalid + label, .contact .container__contact .box__contact .input__contactform textarea:invalid + label {
-    transform: translateY(-1.5rem);
+    -webkit-transform: translateY(-1.5rem);
+            transform: translateY(-1.5rem);
     color: darkred;
     font-size: 0.9rem;
   }
@@ -555,18 +666,21 @@ body #themeToggle {
     border: none;
   }
   .contact .container__contact .box__contact .input__contactform input:placeholder-shown + label, .contact .container__contact .box__contact .input__contactform textarea:placeholder-shown + label {
-    transform: translateY(0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
     color: #2c2c2f;
   }
   .contact .container__contact .box__contact .input__contactform input:focus, .contact .container__contact .box__contact .input__contactform textarea:focus {
     background-color: rgba(255, 255, 255, 0.5);
   }
   .contact .container__contact .box__contact .input__contactform input:focus + label, .contact .container__contact .box__contact .input__contactform textarea:focus + label {
-    transform: translateY(-1.5rem);
+    -webkit-transform: translateY(-1.5rem);
+            transform: translateY(-1.5rem);
     font-size: 0.9rem;
   }
   .contact .container__contact .box__contact .input__contactform input:valid + label, .contact .container__contact .box__contact .input__contactform textarea:valid + label {
-    transform: translateY(-1.5rem);
+    -webkit-transform: translateY(-1.5rem);
+            transform: translateY(-1.5rem);
     font-size: 0.9rem;
   }
   .contact .container__contact .box__contact .input__contactform button {
@@ -603,8 +717,12 @@ body #themeToggle {
     margin: 0 auto;
   }
   footer .info__footer .sociallinks__footer, footer .quicklinks__footer .sociallinks__footer, footer .casestudies__footer .sociallinks__footer, footer .copyright__footer .sociallinks__footer, footer .terms__footer .sociallinks__footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   footer .info__footer .sociallinks__footer .iconify, footer .quicklinks__footer .sociallinks__footer .iconify, footer .casestudies__footer .sociallinks__footer .iconify, footer .copyright__footer .sociallinks__footer .iconify, footer .terms__footer .sociallinks__footer .iconify {
     width: 30px;
@@ -615,9 +733,15 @@ body #themeToggle {
     display: none;
   }
   footer .links__footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-around;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
   footer .links__footer .casestudies__footer {
     width: auto;
@@ -639,4 +763,3 @@ body #themeToggle {
     text-align: center;
   }
 }
-/*# sourceMappingURL=style_mobile.css.map */
