--- a/css/style2.css
+++ b/css/style2.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato:wght@300;400;700&display=swap");
 *,
 *::after,
 *::before {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
   text-decoration: none;
@@ -89,7 +89,8 @@ a {
 .secondaryButton {
   background-color: none;
   color: #009AD8;
-  box-shadow: inset 0 0 0 1px #009AD8;
+  -webkit-box-shadow: inset 0 0 0 1px #009AD8;
+          box-shadow: inset 0 0 0 1px #009AD8;
 }
 
 .linkButton {
@@ -121,9 +122,15 @@ nav {
   top: 0;
   left: 0;
   padding: 0.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   z-index: 100;
 }
 
@@ -131,7 +138,8 @@ nav {
   nav {
     max-width: 1080px;
     left: 50%;
-    transform: translate(-50%, 0);
+    -webkit-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
   }
 }
 
@@ -155,6 +163,7 @@ header {
 header .headerContainer {
   width: 100%;
   height: 100%;
+  display: -ms-grid;
   display: grid;
 }
 
@@ -203,12 +212,13 @@ footer {
   position: fixed;
   bottom: 2rem;
   left: 50%;
-  transform: translate(50%, 0);
+  -webkit-transform: translate(50%, 0);
+          transform: translate(50%, 0);
   max-width: 500px;
   padding: 2rem;
   border: solid 10px;
-  border-image: repeating-linear-gradient(-45deg, yellow, yellow 20px, black 20px, black 40px) 20;
+  -o-border-image: repeating-linear-gradient(-45deg, yellow, yellow 20px, black 20px, black 40px) 20;
+     border-image: repeating-linear-gradient(-45deg, yellow, yellow 20px, black 20px, black 40px) 20;
   background-color: black;
   color: #d4d4d4;
 }
-/*# sourceMappingURL=style2.css.map */
